<resources>
    <!-- FOR FACEBOOK AUTHENTICATION -->
    <string name="facebook_application_id" translatable="false">866904250601022</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb866904250601022</string>
    <!-- END -->

    <!-- GOOGLE API -->
    <string name="google_places_maps_api_key" translatable="false">AIzaSyAx0Xc-MeO9vL92rlS6FSZHJP0CbpNNNek</string>
    <!-- END -->

    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="title_activity_search_lunch" translatable="false">SearchLunchActivity</string>
    <string name="title_restaurant_map" translatable="false">Restaurant map</string>
    <string name="title_restaurant_list" translatable="false">Restaurant list</string>
    <string name="title_workmate_list" translatable="false">Workmate list</string>
    <string name="title_chat" translatable="false">Chat</string>
    <string name="app_subtitle">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="logout">LOGOUT</string>
    <string name="settings">SETTINGS</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="user_picture">User picture</string>
    <string name="workmate_picture">Workmate picture</string>
    <string name="item_workmate_chosen_lunch_text">%1$s is eating %2$s ( %3$s )</string>
    <string name="profile">Profile</string>
    <string name="search_bar">Search Bar</string>
    <string name="menu_button">Menu Button</string>
    <string name="workmates_list">Workmates</string>
    <string name="restaurant_list">List view</string>
    <string name="nav_map">Map view</string>
    <string name="button_login_text_not_logged">Connexion</string>
    <string name="button_login_text_logged">Go4Lunch!!!</string>
    <string name="toolbar_profile_activity">Profile settings activity</string>
    <string name="search_activity_main">Search Activity</string>
    <string name="error_unknown_error">Warning! Unknown error…</string>
    <string name="error_no_internet">Warning! No internet connection…</string>
    <string name="error_authentication_canceled">Warning! Authentication canceled</string>
    <string name="connection_succeed">You are connected!</string>
    <string name="login">Login</string>
    <string name="map_fragment">MAP FRAGMENT</string>
    <string name="restaurant_list_fragment">RESTAURANT LIST FRAGMENT</string>
    <string name="chat_fragment">CHAT FRAGMENT</string>
    <string name="workmates_list_fragment">WORKMATES LIST FRAGMENT</string>
    <string name="search">Search</string>
    <string name="parameters">Parameters</string>
    <string name="info_no_email_found">No email found</string>
    <string name="info_no_username_found">No username found</string>
    <string name="item_workmate_avatar_description">Workmate avatar</string>
    <string name="item_workmate_is_joining">%1$s Is joining!</string>
    <string name="item_message_text" translatable="false">Chat message</string>
    <string name="text_view_chat_error">There is no message yet…</string>
    <string name="text_input_chat_fragment">Type your message here</string>
    <string name="button_send_message_chat_fragment">SEND</string>
    <string name="item_message_avatar" translatable="false">Item Avatar</string>
    <string name="item_message_image_sent" translatable="false">Image Sent</string>
    <string name="item_workmate_lunch_not_chosen_text">%1$s is not yet decided…</string>
    <string name="permission_location_rationale">Go4Lunch need access to your position</string>
    <string name="button_allow">Accept</string>
    <string name="button_deny">Refuse</string>
    <string name="permission_location_denied">Permission location denied</string>
    <string name="permission_location_neverask">Permission for location will never be asked again</string>
    <string name="user_location">You are here!</string>
    <string name="url_googleapis" translatable="false">https://maps.googleapis.com/maps/api/place/</string>
    <string name="url_places_photos" translatable="false"><![CDATA[photo?maxwidth=400&photoreference=]]></string>
    <string name="main_restaurant_picture">main_restaurant_picture</string>
    <string name="choice_floating_button">Choice floating button</string>
    <string name="details_back_arrow">details back arrow</string>
    <string name="rating_star">rating star</string>
    <string name="like_button">Like button</string>
    <string name="call_button">call button</string>
    <string name="website_button">website button</string>
    <string name="restaurant_profile_web_button">WEBSITE</string>
    <string name="restaurant_profile_call_button">CALL</string>
    <string name="restaurant_profile_like_button">LIKE</string>

</resources>