<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_restaurant_map">

    <fragment
        android:id="@+id/navigation_restaurant_map"
        android:name="com.liondevlab.go4lunch.view.fragment.RestaurantMapFragment"
        android:label="@string/title_restaurant_map"
        tools:layout="@layout/fragment_restaurant_map" />

    <fragment
        android:id="@+id/navigation_restaurant_list"
        android:name="com.liondevlab.go4lunch.view.fragment.RestaurantListFragment"
        android:label="@string/title_restaurant_list"
        tools:layout="@layout/fragment_restaurant_list" />

    <fragment
        android:id="@+id/navigation_workmate_list"
        android:name="com.liondevlab.go4lunch.view.fragment.WorkmateListFragment"
        android:label="@string/title_workmate_list"
        tools:layout="@layout/fragment_workmate_list" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.liondevlab.go4lunch.view.fragment.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

</navigation>