<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <!-- IMAGE VIEW LOGO GO4LUNCH -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:shadowRadius="20"
        android:shadowColor="@color/black"
        android:layout_margin="@dimen/default_large_margin"
        android:background="@drawable/logo_white"/>

    <!-- TITLE GO4LUNCH -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/default_title_size"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:shadowRadius="20"
        android:shadowColor="@color/black"
        android:layout_margin="@dimen/default_margin"/>

    <!-- DESCRIPTION GO4LUNCH -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        android:text="@string/app_subtitle"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:shadowRadius="20"
        android:shadowColor="@color/black"
        android:layout_margin="@dimen/default_margin"/>

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_margin="@dimen/default_large_margin">

        <!-- BUTTON LOGIN -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size"
            android:background="@color/colorAccent"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/default_large_margin"
            android:padding="@dimen/default_large_margin"/>

    </LinearLayout>

</LinearLayout>
