<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/restaurant_picture"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/main_restaurant_picture" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="@color/fui_transparent"
            android:padding="5dp"
            android:contentDescription="@string/details_back_arrow" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/choice_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurant_picture"
            app:backgroundTint="@color/white"
            app:tint="@null"
            android:contentDescription="@string/choice_floating_button" />

        <androidx.cardview.widget.CardView
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/restaurant_picture">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/restaurant_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Le Zinc" />

                <TextView
                    android:id="@+id/restaurant_type_and_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="30dp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/restaurant_name"
                    app:layout_constraintTop_toBottomOf="@+id/restaurant_name"
                    tools:text="French - 12 rue du Faubourg Poissonnière" />

                <ImageView
                    android:id="@+id/rating_star_1"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    tools:src="@drawable/ic_baseline_like_star_on_24"
                    app:layout_constraintBottom_toBottomOf="@id/restaurant_name"
                    app:layout_constraintStart_toEndOf="@id/restaurant_name"
                    app:layout_constraintTop_toTopOf="@id/restaurant_name"
                    android:layout_marginStart="6dp"
                    android:contentDescription="@string/rating_star" />
                <ImageView
                    android:id="@+id/rating_star_2"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    tools:src="@drawable/ic_baseline_like_star_on_24"
                    app:layout_constraintBottom_toBottomOf="@id/restaurant_name"
                    app:layout_constraintStart_toEndOf="@id/rating_star_1"
                    app:layout_constraintTop_toTopOf="@id/restaurant_name"
                    android:contentDescription="@string/rating_star" />
                <ImageView
                    android:id="@+id/rating_star_3"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    tools:src="@drawable/ic_baseline_like_star_on_24"
                    app:layout_constraintBottom_toBottomOf="@id/restaurant_name"
                    app:layout_constraintStart_toEndOf="@id/rating_star_2"
                    app:layout_constraintTop_toTopOf="@id/restaurant_name"
                    android:contentDescription="@string/rating_star" />
                <ImageView
                    android:id="@+id/rating_star_4"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    tools:src="@drawable/ic_baseline_like_star_on_24"
                    app:layout_constraintBottom_toBottomOf="@id/restaurant_name"
                    app:layout_constraintStart_toEndOf="@id/rating_star_3"
                    app:layout_constraintTop_toTopOf="@id/restaurant_name"
                    android:contentDescription="@string/rating_star" />
                <ImageView
                    android:id="@+id/rating_star_5"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    tools:src="@drawable/ic_baseline_like_star_on_24"
                    app:layout_constraintBottom_toBottomOf="@id/restaurant_name"
                    app:layout_constraintStart_toEndOf="@id/rating_star_4"
                    app:layout_constraintTop_toTopOf="@id/restaurant_name"
                    android:contentDescription="@string/rating_star" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restaurant_buttons_layout"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintBottom_toTopOf="@+id/participants_recycler_view"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/call_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="30dp"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/call_button_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fui_transparent"
                android:src="@drawable/ic_baseline_call_24"
                android:layout_gravity="center"
                android:paddingBottom="10dp"
                android:contentDescription="@string/call_button" />
            <TextView
                android:id="@+id/call_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_profile_call_button"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/call_button"
            app:layout_constraintEnd_toStartOf="@+id/web_button"
            android:paddingHorizontal="30dp"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fui_transparent"
                tools:src="@drawable/ic_baseline_like_star_on_24"
                android:layout_gravity="center"
                android:paddingBottom="10dp"
                android:contentDescription="@string/like_button" />
            <TextView
                android:id="@+id/like_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_profile_like_button"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/web_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="30dp"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/web_button_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fui_transparent"
                android:src="@drawable/ic_baseline_public_24"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/website_button" />
            <TextView
                android:id="@+id/web_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_profile_web_button"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/participants_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurant_buttons_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="LinearLayoutManager"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>