<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ChatFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/recyclerViewContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_above="@id/message_container">

            <!-- MESSAGE RECYCLER VIEW EMPTY -->
            <TextView
                android:id="@+id/emptyRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_chat_error"
                android:textAlignment="center"
                android:layout_margin="@dimen/default_large_margin"/>

            <!-- RECYCLER VIEW -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chat_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <!-- IMAGE CHOSEN PREVIEW -->
        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/default_margin"
            android:layout_above="@id/message_container"/>

        <!-- ADD MESSAGE CONTAINER -->
        <LinearLayout
            android:id="@+id/message_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/default_margin">

            <!-- ADD FILE BUTTON -->
            <ImageButton
                android:id="@+id/addFileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_baseline_add_circle_24"
                style="@style/Widget.AppCompat.Button.Borderless"/>

            <!-- TEXT MESSAGE EDIT TEXT -->
            <EditText
                android:id="@+id/chatEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:textSize="@dimen/default_text_size"
                android:hint="@string/text_input_chat_fragment"/>

            <!-- ADD MESSAGE BUTTON -->
            <Button
                android:id="@+id/sendButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_send_message_chat_fragment" />

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>